appId: com.test2doc.maestrodemo
---
- tapOn:
    id: todo-input
- inputText: ${TITLE}
- pressKey: Enter
